Changed right arrow. Fixed navbar collapse.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ body {
 .slider {
     -webkit-appearance: none;
     width: 100%;
-    height: 50px;
+    height: 45px;
     background: none;
     outline: none;
     opacity: 0.8;
@@ -95,18 +95,18 @@ body {
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    height: 40px;
-    width: 40px;
-    background: url("../images/rightarrow.png");
+    height: 36px;
+    width: 36px;
+    background: url("../images/icons8-right-button-48.png");
     border: 0;
     cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
     -webkit-appearance: none;
-    height: 40px;
-    width: 40px;
-    background: url("../images/rightarrow.png");
+    height: 36px;
+    width: 36px;
+    background: url("../images/icons8-right-button-48.png");
     border: 0;
     cursor: pointer;
 }
